add the design objectives for the project commented out

--- a/index.html
+++ b/index.html
@@ -22,3 +22,20 @@
     </div>
   </body>
 
+
+
+  <!-- Include a minimum of 5 survey questions.
+* What is your favorite fruit?
+* Do you play a musical instrument?
+* Where do you like to go for vacation?
+* Who is more attractive?
+* Why do you want to learn a new language?
+* When do you prefer to exercise?
+*** BONUS: If you were the president of the USA what would you do on day 1? ***
+  
+Offer a minimum of 3 different language suggestions.
+* Ruby
+* Java
+* Swift
+
+Don't forget regular Git commits and a detailed README. Commit messages should always be on-topic and professional in tone. -->
