add form section 4 with drop down menu

--- a/index.html
+++ b/index.html
@@ -20,22 +20,44 @@
         <img src="img/blank.jpg">
       </div>
 
+<!-- 
+// Question 4 for the user regarding the most attractive dogs. Presented in form of a drop down menu. This question will be counted in the branching logic. // -->
+
+
+  <label for="form-dog">Who is most attractive?</label>
+  <div class="container2">
+    <select class="form-dog" id="attractive">
+      <option value="1">Samoyeds</option>
+      <option value="2">Australian Shepherd</option>
+      <option value="3">Pomeranian</option>
+      <option value="4">Poodle</option>
+      <option value="5">Saluki</option>
+      <option value="6">Maltese</option>
+      <option value="7">Afghan Hound</option>
+      <option value="8">Irish Setter</option>
+      <option value="7">Pharaoh Hound</option>
+      <option value="8">Dog stink. #Cats rule!</option>
+    </select>
+  </div>
+
+
+
 
 <!-- 
 // Question 5 for the user regarding the reasoning for wanting to learn a new coding language. Presented in form of user input. This question will NOT be counted in the branching logic. // -->
 
-    <form id="language">
-      <div class="language-group">
-        <label for="input1">Why do you want to learn another language?:</label>
-        <input id="input1" class="language-control" type="text">
-      </div>
-      <div class="language-group">
-        <label for="input2">What do you hope to build with your new skill?:</label>
-        <input id="input2" class="language-control" type="text">
-      </div>
+  <form id="language">
+    <div class="language-group">
+      <label for="input1">Why do you want to learn another language?:</label>
+      <input id="input1" class="language-control" type="text">
+    </div>
+    <div class="language-group">
+      <label for="input2">What do you hope to build with your new skill?:</label>
+      <input id="input2" class="language-control" type="text">
+    </div>
 
 <!-- 
-// Question number 6 for the user regarding exercise. Presented in form of another drop down. // -->
+// Question number 6 for the user regarding exercise. Presented in form of another drop down. This will be counted in branching logic. // -->
   
 <label for="form-exercise">When do you prefere to exercise?</label>
   <div class="container2">
@@ -66,7 +88,7 @@
             <div class="radio1">
               <label>
                 <input type="radio" name="fruit" value="2" checked>
-                End all foreign engagements 
+                End All Foreign Engagements 
               </label>
             </div>
             <div class="radio1">
@@ -78,7 +100,7 @@
             <div class="radio1">
               <label>
                 <input type="radio" name="fruit" value="4">
-                Take a trip on Airforce 1
+                Take a trip on Airforce 1!
               </label>
             </div>        
             <button type="submit" class="btn">Complete Survey</button>
