add section 3 with a question about vacations.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
         <img src="img/blank.jpg">
       </div>
 
+
+      
+      
+<!-- 
+// Question 3 for the user regarding their favorite place to vacation. Presented in form of a drop down menu. This question will be counted in the branching logic. // -->
+
+  <label for="form-fruit">Favorite Fruit</label>
+  <div class="container2">
+    <select class="form-fruit" id="fruit">
+      <option value="1">Banana</option>
+      <option value="2">Apple</option>
+      <option value="3">Strawberry</option>
+      <option value="4">Grapes</option>
+      <option value="5">Orange</option>
+      <option value="6">Watermelon</option>
+      <option value="7">Grapes</option>
+      <option value="8">Strawberry</option>
+
+    </select>
+  </div>
+
 <!-- 
 // Question 4 for the user regarding the most attractive dogs. Presented in form of a drop down menu. This question will be counted in the branching logic. // -->
 
