change the div calss for the Fruit section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="container">
   <h1>Fruit</h1>
   <form id="fruitmeter">
-  <div class="container-group">
+  <div class="fruit-group">
     <h3>What is your favorite fruit?</h3>
 
       <div class="radio1">
