add image width and height to the blank.jpg

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
       <div id="blank-showing">
         <p>Maecenas eu ex ut massa blandit venenatis a a mauris. Nulla in massa diam. Duis rutrum varius ipsum. Fusce metus eros, ornare a nisl vitae, volutpat lobortis nis! <span class="clickable">Click here</span> to hide  Nunc et suscipit metus. Aenean ullamcorper vulputate scelerisque. Vestibulum finibus risus quis mollis fringilla.</p>
-        <img src="img/blank.jpg">
+        <img src="img/blank.jpg" class="centered-image" width="1920" height ="1080">
       </div>
 
 <!-- 
